Update user creation: require lastName, add symbol to password, fix permission assignment
